# GramsSim

./: .gitignore  CMakeLists.txt  DEPENDENCIES.md  GramsSim organization.pptx  HISTORY.md  README.md  SimpleAnalysis.C  TODO.md  grams.gdml  gramsdetsim.cc  gramsg4.cc  options.xml  pgrams.gdml  rootlogon.C  run.mac  vis.mac  xinclude.xml
Display/: CMakeLists.txt  README.md  simd.cc
Display/include/: LinkDef.hh  SimulationDisplay.h
Display/src/: SimulationDisplay.cc
GDMLSchema/: CMakeLists.txt
GramsDataObj/: CMakeLists.txt  README.md
GramsDataObj/images/: GRAMS_data_objects.pptx
GramsDataObj/include/: Clusters.h  ElectronClusters.h  EventID.h  EventID_LinkDef.h  LinkDef.hh  MCLArHits.h  MCScintHits.h  MCTrackList.h  ReadoutID.h  ReadoutMap.h  ReadoutWaveforms.h
GramsDataObj/src/: Clusters.cc  ElectronClusters.cc  EventID.cc  MCLArHits.cc  MCScintHits.cc  MCTrackList.cc  ReadoutMap.cc  ReadoutWaveforms.cc
GramsDetSim/: CMakeLists.txt  GramsDetSim equations.docx  README.md  gramsdetsim.cc  options.xml
GramsDetSim/include/: AbsorptionModel.h  DiffusionModel.h  RecombinationModel.h
GramsDetSim/src/: AbsorptionModel.cc  DiffusionModel.cc  RecombinationModel.cc
GramsElecSim/: CMakeLists.txt  README.md  gramselecsim.cc  options.xml
GramsElecSim/images/: GramsElecSim response functions.docx
GramsElecSim/include/: ADConvert.h  AddNoise.h  ElecStructure.h  LoadOptionFile.h  PreampProcessor.h  UtilFunctions.h
GramsElecSim/src/: ADConvert.cc  AddNoise.cc  LoadOptionFile.cc  PreampProcessor.cc
GramsG4/: CMakeLists.txt  README.md  gramsg4.cc  options.xml
GramsG4/g4util/include/: Analysis.h  EventAction.h  FixAnalysis.h  RunAction.h  SteppingAction.h  UserAction.h
GramsG4/g4util/src/: FixAnalysis.cc  RunAction.cc  TrackingAction.cc
GramsG4/images/: GramsG4IO.pptx
GramsG4/include/: GramsG4ActionInitialization.hh  GramsG4DetectorConstruction.hh  GramsG4GPSGeneratorAction.hh  GramsG4HepMC3GeneratorAction.hh  GramsG4LArHit.hh  GramsG4NumbersAction.hh  GramsG4RandomSeedAction.hh  GramsG4ScintillatorHit.hh  GramsG4ScintillatorSD.hh  GramsG4WriteNtuplesAction.hh
GramsG4/src/: GramsG4ActionInitialization.cc  GramsG4DetectorConstruction.cc  GramsG4HepMC3GeneratorAction.cc  GramsG4LArHit.cc  GramsG4LArSensitiveDetector.cc  GramsG4NumbersAction.cc  GramsG4RandomSeedAction.cc  GramsG4ScintillatorHit.cc  GramsG4ScintillatorSD.cc  GramsG4WriteNtuplesAction.cc
GramsReadoutSim/: CMakeLists.txt  README.md  gramsreadoutsim.cc  options.xml
GramsReadoutSim/include/: AssignPixelID.h
GramsReadoutSim/src/: AssignPixelID.cc
GramsSky/: CMakeLists.txt  GramsSky functional forms.docx  README.md  gramssky.cc  options.xml
GramsSky/include/: BlackBodyEnergyGenerator.h  EnergyGenerator.h  FixedEnergyGenerator.h  GaussianEnergyGenerator.h  HistogramEnergyGenerator.h  IsotropicPositionGenerator.h  MapEnergyBands.h  MapPowerLawGenerator.h  MonoPrimaryGenerator.h  ParticleGeneration.h  ParticleInfo.h  PointPositionGenerator.h  PointPrimaryGenerator.h  PositionGenerator.h  PowerLawEnergyGenerator.h  PrimaryGenerator.h  RotateCoordinateZ.h  SampleFromPowerLaw.h  SphereToSky.h  TransformCoordinates.h  UniformEnergyGenerator.h
GramsSky/src/: BlackBodyEnergyGenerator.cc  FixedEnergyGenerator.cc  GaussianEnergyGenerator.cc  HistogramEnergyGenerator.cc  IsotropicPositionGenerator.cc  MapEnergyBands.cc  MapPowerLawGenerator.cc  MonoPrimaryGenerator.cc  ParticleGeneration.cc  PointPositionGenerator.cc  PointPrimaryGenerator.cc  PositionGenerator.cc  PowerLawEnergyGenerator.cc  SampleFromPowerLaw.cc  SphereToSky.cc  TransformCoordinates.cc  UniformEnergyGenerator.cc
cmake/: FITS.cmake  HepMC.cmake  README.md  ROOT.cmake
cmake/Modules/: FindROOT.cmake  README.md  macros.cmake
g4util/: README.md
g4util/include/: SteppingAction.h  TrackingAction.h  UserAction.h  UserActionManager.h
g4util/src/: EventAction.cc  RunAction.cc  SteppingAction.cc  UserActionManager.cc
gdml/: README.md  grams-flat.gdml  grams-optical-G4.10.gdml  grams-wires.gdml
include/: CMakeLists.txt  GramsG4ActionInitialization.hh  GramsG4DetectorConstruction.hh  GramsG4HepMC3GeneratorAction.hh  GramsG4LArHit.hh  GramsG4LArSensitiveDetector.hh  GramsG4Options.hh  GramsG4PrimaryGeneratorAction.hh  GramsG4RunMode.hh  GramsG4ScintillatorHit.hh  GramsG4ScintillatorSD.hh  GramsG4WriteHitsAction.hh  GramsG4WriteNtuplesAction.hh  README.md
mac/: CMakeLists.txt  README.md  angle-view.mac  batch.mac  crab-45.mac  crab.mac  debug-geom.mac  draw-axes.mac  energy-crab.mac  energy-mono-0.25MeV.mac  energy-mono-0.5MeV.mac  energy-mono-1MeV.mac  energy-mono-2MeV.mac  energy-mono-4MeV.mac  energy-mono-8MeV.mac  hepmc3.mac  heprep.mac  heprep_accumulate.mac  outline.mac  plane-45.mac  plane-vertical.mac  run.mac  sky.mac  switch-views.mac  vis-hepmc3.mac  vis-menus.mac  vis-sphere.mac  vis.mac  wide-view.mac  x-view.mac  y-view.mac  z-view.mac
scripts/: AllFilesExample.cc  AllFilesExample.py  BacktrackExample.cc  BacktrackExample.py  CMakeLists.txt  Hist2Text.C  HitRestructure.cc  README.md  RadialDistance.py  RestructuredEdx.cc  SimpleAnalysis.C  SimpleAnalysis.py  dEdxExample.cc  dEdxExample.py  energyflux.txt  example.hepmc3  gdmlsearch.cc  healpix-maps.cc  hepmc-convert.cc  hepmc-grams-example.cc  hepmc-ntuple.cc  sillyEnergyFlux.root  skyview.C  skyview.py
src/: GramsG4ActionInitialization.cc  GramsG4DetectorConstruction.cc  GramsG4GPSGeneratorAction.cc  GramsG4HepMC3GeneratorAction.cc  GramsG4LArHit.cc  GramsG4LArSensitiveDetector.cc  GramsG4Options.cc  GramsG4PrimaryGeneratorAction.cc  GramsG4ScintillatorHit.cc  GramsG4ScintillatorSD.cc  GramsG4WriteHitsAction.cc  GramsG4WriteNtuplesAction.cc
util/: CMakeLists.txt  Options diagrams.pptx  README.md  showoptions
util/include/: Geometry.h  Options.h  Options.hh  WriteOptions.h
util/src/: Geometry.cc  Options.cc  WriteOptions.cc
